GNOME Bugzilla – Bug 695265
fail-whale: fix positioning of window
Last modified: 2013-03-06 04:38:11 UTC
The fail whale wasn't always getting positioned right. This commit seems to fix it.
Created attachment 238183 [details] [review] fail-whale: fix positioning of window
Attachment 238183 [details] pushed as d7abfce - fail-whale: fix positioning of window