fail-whale: fix positioning of window

The fail whale wasn't always getting positioned right.

This commit seems to fix it.

https://bugzilla.gnome.org/show_bug.cgi?id=695265